force-app/main/default/objects/Education_History__c/Education_History__c.object-meta.xml
<CustomObject>
    <description>Stores information about a Contact&apos;s education history and related data.</description>
    <label>Education History</label>
    <nameField>
        <displayFormat>EH-{0000}</displayFormat>
        <label>Education History Name</label>
        <type>AutoNumber</type>
        <startingNumber>0001</startingNumber>
    </nameField>
    <pluralLabel>Education History</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>