force-app/main/default/objects/Education_History__c/fields/Academic_Certification__c.field-meta.xml
<CustomField>
    <fullName>Academic_Certification__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>A lookup to the Academic Certification that this Education History applies to, such as a Degree.</description>
    <inlineHelpText>The Academic Certification that this Education History applies to, such as a Degree.</inlineHelpText>
    <label>Academic Certification</label>
    <referenceTo>Academic_Certification__c</referenceTo>
    <relationshipLabel>Education History</relationshipLabel>
    <relationshipName>Education_History</relationshipName>
    <type>Lookup</type>
</CustomField>