force-app/main/default/objects/Education_History__c/fields/Class_Percentile__c.field-meta.xml
<CustomField>
    <fullName>Class_Percentile__c</fullName>
    <description>The student&apos;s percentile ranking for their class. For example, a student that ranks in the top 10% has a 90% value.</description>
    <inlineHelpText>The student&apos;s percentile ranking for their class. For example, a student that ranks in the top 10% has a 90% value.</inlineHelpText>
    <label>Class Percentile</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>