force-app/main/default/objects/Education_History__c/fields/Class_Size__c.field-meta.xml
<CustomField>
    <fullName>Class_Size__c</fullName>
    <description>The number of students that were in the Contact&apos;s class.</description>
    <inlineHelpText>The number of students that were in the Contact&apos;s class.</inlineHelpText>
    <label>Class Size</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>