force-app/main/default/objects/Education_History__c/fields/Credits_Earned__c.field-meta.xml
<CustomField>
    <fullName>Credits_Earned__c</fullName>
    <description>The number of credits earned.</description>
    <inlineHelpText>The number of credits earned.</inlineHelpText>
    <label>Credits Earned</label>
    <precision>9</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>