force-app/main/default/objects/Education_History__c/fields/Details__c.field-meta.xml
<CustomField>
    <fullName>Details__c</fullName>
    <description>Additional details about this student&apos;s educational history.</description>
    <inlineHelpText>Additional details about this student&apos;s educational history.</inlineHelpText>
    <label>Details</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>