force-app/main/default/objects/Education_History__c/fields/Education_History_JSON__c.field-meta.xml
<CustomField>
    <fullName>Education_History_JSON__c</fullName>
    <description>A system field that stores a large JSON structure used for integrations. Do not modify this field.</description>
    <inlineHelpText/>
    <label>Education History JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>