force-app/main/default/objects/Education_History__c/fields/Educational_Institution_Name__c.field-meta.xml
<CustomField>
    <fullName>Educational_Institution_Name__c</fullName>
    <description>The name of the Educational Institution related to this data.</description>
    <label>Educational Institution Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>