force-app/main/default/objects/Education_History__c/fields/End_Date__c.field-meta.xml
<CustomField>
    <fullName>End_Date__c</fullName>
    <description>The date the Contact left this Educational Institution.</description>
    <inlineHelpText>The date the Contact left this Educational Institution.</inlineHelpText>
    <label>End Date</label>
    <type>Date</type>
</CustomField>