force-app/main/default/objects/Education_History__c/fields/GPA__c.field-meta.xml
<CustomField>
    <fullName>GPA__c</fullName>
    <description>The Contact&apos;s final grade point average.</description>
    <inlineHelpText>The Contact&apos;s final grade point average.</inlineHelpText>
    <label>GPA</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>