force-app/main/default/objects/Education_History__c/fields/GPA_Scale_Type__c.field-meta.xml
<CustomField>
    <fullName>GPA_Scale_Type__c</fullName>
    <description>Tracks how the GPA was determined. For example, using a weighted or unweighted scale.</description>
    <inlineHelpText>Tracks how the GPA was determined. For example, using a weighted or unweighted scale.</inlineHelpText>
    <label>GPA Scale Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Unweighted</fullName>
            </value>
            <value>
                <fullName>Weighted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>