force-app/main/default/objects/Education_History__c/fields/Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Start_Date__c</fullName>
    <description>The date the Contact started at this Educational Institution.</description>
    <inlineHelpText>The date the Contact started at this Educational Institution.</inlineHelpText>
    <label>Start Date</label>
    <type>Date</type>
</CustomField>